add style in jambotron section

--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,16 @@
   box-sizing: border-box;
 }
 
+header, .jambotron, footer {
+  padding: 0 15%;
+}
+
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #3161e0;
   height: 50px;
-  padding: 0 250px;
-  
 }
 
 header .menu ul {
@@ -25,6 +27,21 @@ header .menu li {
 
 header .menu a {
   color: white;
+}
+
+main .jambotron {
+  background-color: #7fa1f6;
+  color: white;
+  text-align: center;
+  padding: 50px 20%;
+}
+
+main .jambotron h1 {
+  padding-bottom: 30px;
+}
+
+main .jambotron p {
+  padding-bottom: 15px;
 }
 
 
