--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,25 @@
   padding: 0;
   box-sizing: border-box;
 }
+.debug {
+  border: 1px solid black;
+}
 
-header, .jambotron,.why-choose, footer {
+
+header, .jambotron,.why-choose, footer, .debug {
   padding: 0 15%;
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
+  
   align-items: center;
   background-color: #3161e0;
-  height: 50px;
+  height: 80px;
 }
+ header .header-bar {
+  display: flex;
+  justify-content: space-between;
+ }
 
 header .menu ul {
   display: flex;
@@ -25,13 +32,12 @@ header .menu li {
   padding-left: 40px;
 }
 
-header .menu a {
-  color: white;
+main {
+  background-color: lightgray;
+  
 }
-
-main .jambotron {
-  background-color: #7fa1f6;
-  color: white;
+main .jambotron.debug {
+  /* color: white; */
   text-align: center;
   padding: 50px 20%;
 }
@@ -45,7 +51,6 @@ main .jambotron p {
 }
 
 main .features-top .why-choose {
-  background-color: #ffffff;
   display: flex;
   justify-content: space-between;
   padding-top:50px;
@@ -65,6 +70,12 @@ main .why-choose .description {
 main .features-top .why-choose.special {
   background-color: #f6f6f6;
 }
+
+main .features-bottom {
+  height: 300px;
+  background-color: yellow;
+}
+
 
 
 
