--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,13 @@ header {
   justify-content: space-between;
  }
 
+ header ul, footer ul {
+  list-style: none;
+ }
+ 
+
 header .menu ul {
   display: flex;
-  list-style: none;
 }
 
 header .menu li {
@@ -62,7 +66,7 @@ main .features-top .why-choose, .why-choose.special {
   padding-bottom:50px;
 }
 
-main .features-top .why-choose .frog-imagine {
+main .features-top .why-choose .frog-image {
   background-color: red;
   height: 300px;
   width: 55%;
@@ -72,19 +76,66 @@ main .features-top .why-choose.special {
   flex-direction: row-reverse;
 }
 
-main .why-choose .description {
+main .features-top .why-choose .description {
   width:35% ;
 }
 
 main .features-bottom {
-  height: 300px;
   background-color: yellow;
 }
 
-main .features-bottom .frog-imagine {
-  width: 100%
+main .features-bottom .frog-image {
   height: 300px;
+  background-color: red;
 }
+
+main .features-bottom .description {
+  text-align: center;
+}
+
+main .features-bottom .why-choose {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+main .features-bottom .why-choose h2 {
+  padding-bottom: 30px;
+}
+
+.features-bottom .last-call {
+  text-align: center;
+}
+
+footer {
+  background-color:greenyellow;
+}
+
+footer .top {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer .menu-section {
+  display: flex;
+  justify-content: space-between;
+  width: 40%;
+}
+
+footer .contacts {
+  width: 30%;
+}
+
+footer .contacts {
+  width: 40%;
+}
+
+
+
+
+
+
+
+
+
 
 
 
